# old-norse-alphabet-rs

./: Cargo.toml  README.md
src/: lib.rs
src/alphabet/: mod.rs
src/sort/: mod.rs
tests/: alphabet_tests.rs  sort_tests.rs
tests/snapshots/: alphabet_tests__exposes_lower_alphabet.snap  alphabet_tests__exposes_upper_alphabet.snap
