[package]
name = "old-norse-alphabet"
version = "1.0.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/old-norse-alphabet-rs"
description = """
Old Norse alphabet constants & sort for Rust
"""
keywords = ["old-norse", "alphabet", "sort"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]